--- a/WebContent/post-form.html
+++ b/WebContent/post-form.html
@@ -1,17 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
-<HEAD>
-  <TITLE>A Sample Form Using POST</TITLE>
-</HEAD>
-<BODY BGCOLOR="#FDF5E6">
-<CENTER>
-<H2>A Sample Form Using POST</H2>
-<FORM ACTION="processGetPost" METHOD="POST">
-  First name:
-  <INPUT TYPE="TEXT" NAME="firstName" VALUE="J. Random"><BR>
-  Last name:
-  <INPUT TYPE="TEXT" NAME="lastName" VALUE="Hacker"><P>
-  <INPUT TYPE="SUBMIT">
-</FORM>
-</CENTER>
-</BODY></HTML>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="ISO-8859-1">
+  <title>A Sample Form Using POST</title>
+</head>
+<body bgcolor="#FDF5E6">
+<h2>A Sample Form Using POST</h2>
+<form action="processGetPost" method="POST">
+  First Name:
+  <input type="text" name="firstName" value="J. Random"><BR>
+  Last Name:
+    <input type="text" name="lastName" value="Hacker"><P>
+  Email Address:
+  <input type="email" name="emailAddress" value="Hacker"><P>
+  <input type="submit"> <!-- Press this button to submit form -->
+</form>
+</body></html>
