Starting Pizza Ordering System

--- a/WebContent/three-params-form-post.html
+++ b/WebContent/three-params-form-post.html
@@ -3,7 +3,7 @@
 <BODY BGCOLOR="#FDF5E6">
 <H1 ALIGN="CENTER">Collecting Three Parameters</H1>
 
-<FORM ACTION="three-params">
+<FORM ACTION="ThreeParamsPost" METHOD="POST">
   First Parameter:  <INPUT TYPE="TEXT" NAME="param1"><BR>
   Second Parameter: <INPUT TYPE="TEXT" NAME="param2"><BR>
   Third Parameter:  <INPUT TYPE="TEXT" NAME="param3"><BR>
