--- a/WebContent/post-form.html
+++ b/WebContent/post-form.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-  <title>A Sample Form Using POST</title>
+  <title>Registration Form: POST</title>
 </head>
 <body bgcolor="#FDF5E6">
-<h2>A Sample Form Using POST</h2>
+<h2 align="right">Registration Form: POST</h2>
 <form action="processGetPost" method="POST">
   First Name:
-  <input type="text" name="firstName" value="J. Random"><BR>
-  Last Name:
-    <input type="text" name="lastName" value="Hacker"><P>
-  Email Address:
-  <input type="email" name="emailAddress" value="Hacker"><P>
+  <input type="text" name="firstName" value="J. Random">
+  <br><br>Last Name:
+    <input type="text" name="lastName" value="Hacker">
+  <br><br>Email Address: 
+  <input type="email" name="emailAddress" value="example@example.com"><P>
   <input type="submit"> <!-- Press this button to submit form -->
 </form>
 </body></html>
