Change Topping selector
Change the topping selector to stop support for multiple selections.
Removed the “multiple” attribute from the select list, which now allows
a single topping to be selected and printed to the terminal. Also
renamed the option values.

--- a/WebContent/pizzaorder.html
+++ b/WebContent/pizzaorder.html
@@ -39,10 +39,10 @@
 		</select> 
 			
 		<br>Toppings:
-		<select multiple name="toppings">
-		  <option value="a">Topping 1</option>
-		  <option value="b">Topping 2</option>
-		  <option value="c">Topping 3</option>
+		<select name="toppings">
+		  <option value="Topping 1">Topping 1</option>
+		  <option value="Topping 2">Topping 2</option>
+		  <option value="Topping 3">Topping 3</option>
 		</select>	
 		
 		<br><br>First Name:
