Structure changes to the pizzaorder.html and renaming of option values.
Updated the option values to the pizzaorder.html to improve output to
the end user in the pizzaOrderProcessor.java. Also added spacing to the
variable which are printed out to the terminal in the
pizzaOrderProcessor.java.

--- a/WebContent/pizzaorder.html
+++ b/WebContent/pizzaorder.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="ISO-8859-1">
-	  <title>Pizza Order Form</title>
-</head>
+	<head>
+		<meta charset="ISO-8859-1">
+		  <title>Pizza Order Form</title>
+	</head>
 	
 	<body bgcolor="#FDF5E6">
 		<h2> Pizza Order Form</h2>
@@ -11,30 +11,30 @@
 		
 		Pizza: 
 		<select name="pizzaType">
-		  <option value="chicago">Chicago Style</option>
-		  <option value="york">New York Style</option>
-		  <option value="haven">New Haven Style</option>
-		  <option value="napoletana">Verace Pizza Napoletana Style</option>
+		  <option value="Chicago Style">Chicago Style</option>
+		  <option value="New York Style">New York Style</option>
+		  <option value="New Haven Style">New Haven Style</option>
+		  <option value="Verace Pizza Napoletana Style">Verace Pizza Napoletana Style</option>
 		</select> 
 		
 		<br>Size:
 		<select name="pizzaSize">
-		  <option value="7">7 Inch</option>
-		  <option value="9">9 Inch</option>
-		  <option value="12">12 Inch</option>
-		  <option value="14">14 Inch</option>
-		  <option value="21">21 Inch (Fat Bastard)</option>
+		  <option value="7 Inch">7 Inch</option>
+		  <option value="9 Inch">9 Inch</option>
+		  <option value="12 Inch">12 Inch</option>
+		  <option value="14 Inch">14 Inch</option>
+		  <option value="21 Inch">21 Inch (Fat Bastard)</option>
 		</select> 
 		
 		<br>Base:
 		<select name="pizzaBase">
 		<optgroup label="Standard">
-		  <option value="thin">Thin Crust</option>
-		  <option value="deep">Deep Pan</option>
+		  <option value="Thin Crust">Thin Crust</option>
+		  <option value="Deep Pan">Deep Pan</option>
 		  </optgroup>
 		  <optgroup label="Stuffed">
-		  <option value="thin-stuffed">Thin Crust: Stuffed Crust</option>
-		  <option value="deep-stuffed">Deep Pan: Stuffed Crust</option>
+		  <option value="Thin Crust: Stuffed Crust">Thin Crust: Stuffed Crust</option>
+		  <option value="Deep Pan: Stuffed Crust">Deep Pan: Stuffed Crust</option>
 		  </optgroup>
 		</select> 
 			
