Changed email to phone number
Removed the variable emaillAddress and replaced it with a phone number
variable. The email variable was not needed and a phone number was
required. This was updated in both the java and the HTML form.

--- a/WebContent/pizzaorder.html
+++ b/WebContent/pizzaorder.html
@@ -52,8 +52,8 @@
 			<input type="text" name="lastName" value="Last Name">
 			
 			
-		<br>Email:
-		  <input type="email" name="emailAddress" value="example@example.com">
+		<br>Phone Number:
+		  <input type="number" name="phoneNumber" value="01234567890">
 		  
 		
 		  <input type="submit"> <!-- Press this button to submit form -->
