Changes to the HTML form so that the text data inout have placeholders instead of values.

--- a/WebContent/pizzaorder.html
+++ b/WebContent/pizzaorder.html
@@ -46,14 +46,14 @@
 		</select>	
 		
 		<br><br>First Name:
-			<input type="text" name="firstName" value="First Name">
+			<input type="text" name="firstName" placeholder="First Name">
 			
 		<br>Last Name:
-			<input type="text" name="lastName" value="Last Name">
+			<input type="text" name="lastName" placeholder="Last Name">
 			
 			
 		<br>Phone Number:
-		  <input type="number" name="phoneNumber" value="01234567890">
+		  <input type="number" name="phoneNumber" placeholder="01234567890">
 		  
 		
 		  <input type="submit"> <!-- Press this button to submit form -->
